versions/v0.18/modules/en/pages/operator/chart.adoc
= Chart Configuration
:description: Configure feature flags and customize Cluster API Operator installation using Helm charts for SUSE Rancher Prime Cluster API
:revdate: 2025-04-04
:page-revdate: {revdate}

[TIP]
====
For the up-to-date content of `values.yaml` source file, refer to the https://github.com/rancher/turtles[{product_name} repository].
====


== {product_name} values

When installing {product_name} using the official Helm chart, it is possible to configure a number of feature flags. This is a comprehensive list of the available values and their usage:

[source,yaml]
----
rancherTurtles:
  features:
    day2operations:
      enabled: false # indicates whether day 2 operations functionality is enabled (default: false).
      etcdBackupRestore:
        enabled: false # indicates whether ETCD backup/restore experimental functionality is enabled (default: false).
    addon-provider-fleet:
      enabled: true # indicates whether the fleet addon provider is installed (default: true).
    agent-tls-mode:
      enabled: false # use CA certs stored in Rancher when importing CAPI clusters.
    clusterclass-operations: 
      enabled: false # indicates whether ClusterClass operations functionality is enabled (default: false).
----

The list has been truncated to show only the configurable feature flags. Other fields with the `rancherTurtles` key are automatically set when a chart is released. 

[NOTE]
====
Nested feature flags take effect when their parent feature flag is enabled. For example, the `rancherTurtles.features.day2operations.etcdBackupRestore.enabled` flag takes effect only when the `rancherTurtles.features.day2operations.enabled` flag is set to true.
====

== Cluster API Operator values

{product_name} uses the `Cluster API Operator` Helm chart to install this dependency, and any values passed to Helm with the `cluster-api-operator` key are passed along to the `Cluster API Operator` chart in order to customize its installation.

[TIP]
====
A full set of available values for the `Cluster API Operator` can be found in the operator https://github.com/kubernetes-sigs/cluster-api-operator/blob/main/hack/charts/cluster-api-operator/values.yaml[values.yaml].
====


Currently the available set of values for the `cluster-api-operator` setup in the `rancher-turtles`:

[source,yaml]
----
cluster-api-operator:
  enabled: true # indicates whether CAPI operator is installed (default: true).
  cleanup: true # indicates whether CAPI operator resources are cleaned up on uninstall (default: true).
  cert-manager:
    enabled: false # indicates whether cert-manager is installed (default: false).
  cluster-api:
    enabled: true # indicates whether core CAPI controllers are installed (default: true).
    configSecret:
      name: "" # (provide only if using a user-managed secret) name of the config secret to use for core CAPI controllers, used by the CAPI operator. See https://github.com/kubernetes-sigs/cluster-api-operator/tree/main/docs#installing-azure-infrastructure-provider docs for more details.
      defaultName: "capi-env-variables" # default name for the automatically created secret.
    core:
      namespace: capi-system
      imageUrl: "" # image URL to override the image for a provider.
      fetchConfig: # (only required for airgapped environments).
        url: ""  # url to fetch config from, used by the CAPI operator. See https://github.com/kubernetes-sigs/cluster-api-operator/tree/main/docs#provider-spec docs for more details.
        selector: ""  # selector to use for fetching config, used by the CAPI operator.
    rke2:
      enabled: true # indicates whether RKE2 provider for Cluster API is installed (default: true).
      version: "" # version of Cluster API Provider RKE2 (CAPRKE2) to install.
      bootstrap: # CAPRKE2 Bootstrap Provider.
        namespace: rke2-bootstrap-system
        imageUrl: "" # image URL to override the image for a provider.
        fetchConfig: # (only required for airgapped environments)
          url: ""  # url to fetch config from, used by the CAPI operator. See https://github.com/kubernetes-sigs/cluster-api-operator/tree/main/docs#provider-spec docs for more details.
          selector: ""  # selector to use for fetching config, used by the CAPI operator.
      controlPlane: # CAPRKE2 Control Plane Provider.
        namespace: rke2-control-plane-system
        imageUrl: "" # image URL to override the image for a provider.
        fetchConfig:  # (only required for airgapped environments)
          url: "" # url to fetch config from, used by the CAPI operator. See https://github.com/kubernetes-sigs/cluster-api-operator/tree/main/docs#provider-spec docs for more details.
          selector: ""  # selector to use for fetching config, used by the CAPI operator.
----
